Tweaks overflow-x fields for scroll issues

--- a/resources/sass/_general.scss
+++ b/resources/sass/_general.scss
@@ -116,10 +116,12 @@
         .character_name
         {
             font-family: fantasy;
-            font-size: 22px;
+            font-size: 24px;
+            height: 33px;
             left: 60px;
             overflow-x: scroll;
             top: 73px;
+            white-space: nowrap;
             width: 200px;
         }
 
@@ -527,7 +529,7 @@
             height: 26px;
             @include justify-content(space-between);
             left: 417px;
-            top: 354px;
+            top: 355px;
             width: 41px;
 
             .success,
@@ -566,7 +568,9 @@
             .name,
             .damage_and_type
             {
+                height: 22px;
                 overflow-x: scroll;
+                white-space: nowrap;
             }
 
             .name
@@ -701,9 +705,11 @@
         {
             font-family: fantasy;
             font-size: 24px;
+            height: 33px;
             left: 65px;
             overflow-x: scroll;
             top: 74px;
+            white-space: nowrap;
             width: 234px;
         }
 
@@ -841,9 +847,11 @@
         {
             font-family: fantasy;
             font-size: 24px;
+            height: 33px;
             left: 65px;
             overflow-x: scroll;
             top: 73px;
+            white-space: nowrap;
             width: 234px;
         }
 
@@ -944,7 +952,7 @@
         .spell_level_0 .spell_list
         {
             height: 129px;
-            top: 38px;
+            top: 43px;
         }
 
         .spell_level_1
@@ -954,7 +962,7 @@
             .spell_list
             {
                 height: 215px;
-                top: 43px;
+                top: 48px;
             }
         }
 
@@ -965,7 +973,7 @@
             .spell_list
             {
                 height: 213px;
-                top: 41px;
+                top: 46px;
             }
         }
 
@@ -1055,6 +1063,7 @@
         {
             height: 34px;
             line-height: 34px;
+            margin-top: 4px;
             position: absolute;
             text-align: center;
         }
